--- a/source/sass/global/fonts.scss
+++ b/source/sass/global/fonts.scss
@@ -7,6 +7,14 @@
 }
 
 @font-face {
+  font-family: "AlumniSans-ExtraBold";
+  font-weight: 800;
+  font-style: normal;
+  font-display: swap;
+  src: url("../fonts/AlumniSans-ExtraBold.woff2") format("woff2");
+}
+
+@font-face {
   font-family: "RobotoCondensed";
   font-weight: 400;
   font-style: normal;
