--- a/source/sass/global/variables.scss
+++ b/source/sass/global/variables.scss
@@ -33,6 +33,7 @@ $color-torch-red: #ff1553;
 $ff-placeholder: "Roboto-Condensed-Regular", "Arial", sans-serif;
 $font-roboto: "RobotoCondensed", "Arial", sans-serif;
 $font-alumni: "AlumniSans", "Arial", sans-serif;
+$font-alumni-extrabold: "AlumniSans-ExtraBold", "Arial", sans-serif;
 $fz-default: 16px;
 $lh-default: 24px;
 
