--- a/source/sass/blocks/card.scss
+++ b/source/sass/blocks/card.scss
@@ -41,16 +41,25 @@
 }
 
 .card__price {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  margin: 0 auto;
   position: relative;
   z-index: 1;
   font-size: 60px;
   font-weight: 700;
   line-height: 90px;
-  letter-spacing: -0.75px;
   color: $color-main-lignt;
 
   span {
+    letter-spacing: -0.5px;
     color: $color-main;
+  }
+
+  .card__price-rub {
+    padding-left: 13px;
+    display: block;
   }
 
   @include vp-767 {
