--- a/source/sass/blocks/advantages.scss
+++ b/source/sass/blocks/advantages.scss
@@ -19,6 +19,7 @@
 .advantages__title {
   margin-bottom: 51px;
   text-align: center;
+  letter-spacing: 3px;
 
   @include vp-1365 {
     margin-bottom: 20px;
@@ -113,7 +114,8 @@
   &:first-child {
     font-size: 72px;
     font-weight: 700;
-    line-height: 72px;
+    line-height: 69px;
+    letter-spacing: 1px;
     color: transparent;
     background-color: currentColor;
     background-image: linear-gradient(142.51deg, #d10a42 0%, #0041ca 87.33%);
