--- a/source/sass/global/variables.scss
+++ b/source/sass/global/variables.scss
@@ -34,6 +34,7 @@ $ff-placeholder: "Roboto-Condensed-Regular", "Arial", sans-serif;
 $font-roboto: "RobotoCondensed", "Arial", sans-serif;
 $font-alumni: "AlumniSans", "Arial", sans-serif;
 $font-alumni-extrabold: "AlumniSans-ExtraBold", "Arial", sans-serif;
+$font-alumni-semibold: "AlumniSans-SemiBold", "Arial", sans-serif;
 $fz-default: 16px;
 $lh-default: 24px;
 
