--- a/source/sass/global/fonts.scss
+++ b/source/sass/global/fonts.scss
@@ -15,6 +15,14 @@
 }
 
 @font-face {
+  font-family: "AlumniSans-SemiBold";
+  font-weight: 600;
+  font-style: normal;
+  font-display: swap;
+  src: url("../fonts/AlumniSans-SemiBold.woff2") format("woff2");
+}
+
+@font-face {
   font-family: "RobotoCondensed";
   font-weight: 400;
   font-style: normal;
