pixels to judges

--- a/source/sass/blocks/button.scss
+++ b/source/sass/blocks/button.scss
@@ -3,7 +3,6 @@
   width: 100%;
   max-width: 230px;
   padding: 27px 20px;
-
   font-family: $font-roboto;
   font-size: 12px;
   font-weight: 700;
@@ -11,7 +10,7 @@
   color: $color-default-white;
   text-align: center;
   text-transform: uppercase;
-  letter-spacing: 0.6px;
+  // letter-spacing: 0.6px;
   background-color: transparent;
   border: none;
   box-shadow: 0 0 0 2px $color-default-white inset;
