--- a/source/sass/blocks/card.scss
+++ b/source/sass/blocks/card.scss
@@ -1,5 +1,5 @@
 .card__title {
-  margin: 0 0 9px;
+  margin: 0 0 20px;
   font-size: 26px;
   font-weight: 700;
   line-height: 26px;
@@ -29,7 +29,7 @@
 
 .card__price-wrapper {
   position: relative;
-  padding: 72px 0 0;
+  padding: 80px 0 0;
 
   @include vp-1365 {
     padding: 76px 0 0;
@@ -70,7 +70,7 @@
 
 .card__shadow {
   position: absolute;
-  bottom: 13%;
+  bottom: 16%;
   left: 50%;
   transform: translateX(-50%);
   font-size: 100px;
@@ -90,9 +90,10 @@
 
 .card__button {
   display: block;
-  width: 208px;
-  margin: 35px auto 0;
+  width: 230px;
+  margin: 17px auto 0;
   user-select: none;
+  padding: 27px 20px 26px 20px;
 
   @include vp-1365 {
     margin: 25px auto 0;
