--- a/source/sass/blocks/filter-list.scss
+++ b/source/sass/blocks/filter-list.scss
@@ -4,7 +4,7 @@
   gap: 20px 50px;
   justify-content: center;
   width: fit-content;
-  margin: 0 auto 35px;
+  margin: 0 auto 40px;
   padding: 0;
   list-style-type: none;
   border-bottom: 2px solid rgba(120, 120, 120, 0.2);
@@ -25,7 +25,7 @@
   z-index: 1;
   display: block;
   margin: 0 0 -2px;
-  padding: 10px 0;
+  padding: 10px 0 8px 0;
   font-family: $font-roboto;
   font-size: 20px;
   line-height: 20px;
