--- a/source/sass/blocks/games-card.scss
+++ b/source/sass/blocks/games-card.scss
@@ -17,10 +17,12 @@
 }
 
 .games-card__title {
-  margin: 0 0 4px;
+  margin: 0 0 0 0;
+  padding: 0 0 3px 0;
   font-size: 18px;
   font-weight: 300;
   line-height: 29px;
+  border-bottom: 1px solid $color-default-white;
 
   @include vp-1365 {
     line-height: 22px;
@@ -39,11 +41,12 @@
   flex-wrap: wrap;
   justify-content: start;
   width: fit-content;
-  padding-top: 5px;
+  padding: 8px 0 0 0;
   font-size: 39px;
   font-weight: 700;
   line-height: 40px;
-  border-top: 1px solid $color-default-white;
+  letter-spacing: 0.5px;
+  // border-top: 1px solid $color-default-white;
 
   @include vp-1365 {
     font-size: 24px;
@@ -58,10 +61,11 @@
 
 .games-card__date {
   width: 45px;
-  padding: 3px 0 0 7px;
+  margin: -3px 0 0 0;
+  padding: 0 0 0 7px;
   font-size: 14px;
   font-weight: 400;
-  line-height: 17px;
+  line-height: 22px;
 
   @include vp-1365 {
     font-size: 10px;
