--- a/source/sass/blocks/gym.scss
+++ b/source/sass/blocks/gym.scss
@@ -1,5 +1,5 @@
 .gym {
-  padding: 114px 0 121px;
+  padding: 114px 0 125px;
 
   @include vp-1365 {
     padding: 100px 0;
@@ -47,7 +47,8 @@
 }
 
 .gym__title {
-  margin-bottom: 31px;
+  margin: 6px 0 26px 0;
+  // margin-bottom: 31px;
   font-size: 54px;
   line-height: 54px;
   // letter-spacing: 3.2px;
@@ -69,7 +70,7 @@
 }
 
 .gym__subtitle {
-  margin: 0 0 93px;
+  margin: 0 0 94px;
   font-size: 22px;
   line-height: 22px;
 
@@ -134,10 +135,9 @@
   position: absolute;
   content: "";
   bottom: 0;
-  left: 0;
-
+  left: -38px;
   display: block;
-  width: 50.3%;
+  width: 49.95%;
 
   @include vp-1365 {
     left: 50%;
