--- a/source/sass/blocks/title.scss
+++ b/source/sass/blocks/title.scss
@@ -1,10 +1,10 @@
 .title {
   margin: 0;
-  font-family: $font-alumni;
-  font-size: 52px;
+  font-family: $font-alumni-semibold;
+  font-size: 54px;
   font-weight: 600;
   line-height: 54px;
-  letter-spacing: 3.2px;
+  // letter-spacing: 3px;
 
   @include vp-1365 {
     font-size: 42px;
