--- a/source/sass/blocks/judges.scss
+++ b/source/sass/blocks/judges.scss
@@ -1,5 +1,5 @@
 .judges {
-  padding: 140px 0 120px;
+  padding: 140px 0 100px;
 
   @include vp-1365 {
     padding: 42px 0 100px;
@@ -42,7 +42,8 @@
 }
 
 .slider__button--prev {
-  left: -14px;
+  left: -9px;
+  top: 49%;
 
   svg {
     position: absolute;
@@ -65,7 +66,8 @@
 }
 
 .slider__button--next {
-  right: -14px;
+  right: -11px;
+  top: 49%;
 
   svg {
     transform: rotate(180deg);
