--- a/source/sass/blocks/discounts-card.scss
+++ b/source/sass/blocks/discounts-card.scss
@@ -58,8 +58,8 @@
   border: none;
 
   .discounts-card__content {
-    gap: 15px;
-    padding: 40px 44px 44px;
+    gap: 20px;
+    padding: 40px 44px 40px 45px;
 
     @include vp-767 {
       grid-row: 1/ 2;
@@ -158,7 +158,7 @@
 }
 
 .discounts-card__price {
-  margin: 0 0 10px;
+  margin: 0 0 20px;
   font-size: 70px;
   font-weight: 700;
   line-height: 70px;
@@ -214,16 +214,17 @@
   display: block;
   width: fit-content;
   margin-top: auto;
-  padding: 7px 0;
+  padding: 7px 0 5px 0;
   font-size: 14px;
   font-weight: 700;
   line-height: 14px;
   color: $color-main-light2;
   text-transform: uppercase;
-  letter-spacing: 0.7px;
+  // letter-spacing: 0.7px;
   user-select: none;
 
   &::before {
+    width: 100%;
     position: absolute;
     content: "";
     inset: 0;
