--- a/source/sass/blocks/faq.scss
+++ b/source/sass/blocks/faq.scss
@@ -1,5 +1,5 @@
 .faq {
-  padding: 120px 0 121px;
+  padding: 100px 0 98px;
   background-color: #f8f9fc;
 
   @include vp-1365 {
@@ -12,8 +12,8 @@
 }
 
 .faq__title {
-  margin-bottom: 51px;
-  letter-spacing: 2.9px;
+  margin-bottom: 50px;
+  // letter-spacing: 2.9px;
 
   @include vp-1365 {
     text-align: center;
@@ -80,7 +80,7 @@
 
 .faq__button {
   max-width: none;
-  padding: 19px 20px 17px;
+  padding: 20px 20px 16px;
   font-size: 18px;
   font-weight: 400;
   line-height: 18px;
