--- a/source/sass/blocks/free.scss
+++ b/source/sass/blocks/free.scss
@@ -1,5 +1,5 @@
 .free {
-  padding: 59px 170px 59px 0;
+  padding: 59px 103px 59px 0;
   color: $color-default-white;
   background-color: $color-main;
 
@@ -17,8 +17,8 @@
 }
 
 .free__title {
-  letter-spacing: 2.9px;
-  margin-bottom: 25px;
+  // letter-spacing: 2.9px;
+  margin-bottom: 30px;
 
   @include vp-1365 {
     font-size: 40px;
@@ -37,7 +37,7 @@
   form {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
-    gap: 37px 27px;
+    gap: 35px 30px;
     color: $color-default-white;
     background-color: $color-main;
 
@@ -54,6 +54,7 @@
 .free__button {
   grid-column: 1 / -1;
   max-width: none;
+  padding: 28px 20px 25px 20px;
 
   @include vp-767 {
     margin-top: 16px;
