--- a/source/sass/blocks/nav-list.scss
+++ b/source/sass/blocks/nav-list.scss
@@ -1,9 +1,9 @@
 .nav-list {
   display: flex;
   flex-wrap: wrap;
-  gap: 20px 41px;
+  // gap: 20px 41px;
   align-items: center;
-  justify-content: center;
+  justify-content: space-between;
   margin: 0;
   padding: 0;
   list-style-type: none;
