--- a/source/sass/blocks/card-list.scss
+++ b/source/sass/blocks/card-list.scss
@@ -10,7 +10,7 @@
   @include vp-1365 {
     grid-template-columns: 1fr;
     gap: 40px;
-    margin: 43px 0 5px;
+    margin: 45px 0 5px;
   }
 
   @include vp-767 {
@@ -24,20 +24,20 @@
   display: flex;
   flex-direction: column;
   margin: 0 auto;
-  padding: 58px 20px 58px;
+  padding: 58px 20px 58px 20px;
   text-align: center;
   background-color: $color-default-white;
   border: 7px solid rgba(232, 232, 232, 0);
   width: 360px;
 
   @include vp-1365 {
-    width: 440px;
-    padding: 60px 20px 56px;
+    width: 380px;
+    padding: 57px 20px 58px 20px;
   }
 
   @include vp-767 {
     width: 100%;
-    padding: 42px 20px 43px;
+    padding: 42px 20px 43px 20px;
   }
 }
 
