--- a/source/sass/blocks/card.scss
+++ b/source/sass/blocks/card.scss
@@ -7,7 +7,7 @@
 
   @include vp-1365 {
     font-size: 24px;
-    margin: 0 0 16px;
+    margin: 0 0 24px;
   }
 
   @include vp-767 {
@@ -32,7 +32,7 @@
   padding: 80px 0 0;
 
   @include vp-1365 {
-    padding: 76px 0 0;
+    padding: 85px 0 0;
   }
 
   @include vp-767 {
@@ -58,7 +58,7 @@
   }
 
   .card__price-rub {
-    padding-left: 13px;
+    padding-left: 11px;
     display: block;
   }
 
@@ -79,7 +79,7 @@
   color: #e8e8e8;
 
   @include vp-1365 {
-    bottom: 12%;
+    bottom: 15%;
   }
 
   @include vp-767 {
@@ -96,8 +96,9 @@
   padding: 27px 20px 26px 20px;
 
   @include vp-1365 {
-    margin: 25px auto 0;
-    width: 206px;
+    margin: 22px auto 0;
+    max-width: 250px;
+    width: 250px;
   }
 
   @include vp-767 {
