--- a/source/sass/blocks/advantages.scss
+++ b/source/sass/blocks/advantages.scss
@@ -3,7 +3,7 @@
   background-color: #f8f9fc;
 
   @include vp-1365 {
-    padding: 102px 0 98px;
+    padding: 61px 0 98px;
   }
 
   @include vp-767 {
@@ -23,7 +23,7 @@
 
   @include vp-1365 {
     margin-bottom: 20px;
-    letter-spacing: 1.65px;
+    // letter-spacing: 1.65px;
   }
 
   @include vp-767 {
