--- a/source/sass/blocks/title.scss
+++ b/source/sass/blocks/title.scss
@@ -9,12 +9,12 @@
   @include vp-1365 {
     font-size: 42px;
     line-height: 42px;
-    letter-spacing: 1.26px;
+    // letter-spacing: 1.26px;
   }
 
   @include vp-767 {
     font-size: 32px;
     line-height: 32px;
-    letter-spacing: 0.96px;
+    // letter-spacing: 0.96px;
   }
 }
