--- a/source/sass/blocks/discounts.scss
+++ b/source/sass/blocks/discounts.scss
@@ -2,11 +2,11 @@
   padding: 100px 0 100px;
 
   @include vp-1365 {
-    padding: 101px 0 100px;
+    padding: 61px 0 100px;
   }
 
   @include vp-767 {
-    padding: 71px 0 70px;
+    padding: 61px 0 70px;
   }
 }
 
@@ -15,8 +15,8 @@
   text-align: center;
 
   @include vp-1365 {
-    margin-bottom: 39px;
-    letter-spacing: 1.65px;
+    margin-bottom: 33px;
+    // letter-spacing: 1.65px;
   }
 
   @include vp-767 {
