--- a/source/sass/blocks/accordion.scss
+++ b/source/sass/blocks/accordion.scss
@@ -5,6 +5,10 @@
   padding: 0;
   list-style-type: none;
   border-top: 1px solid rgba(28, 51, 116, 0.2);
+
+  @include vp-1365 {
+    margin: 0 0 0 0;
+  }
 }
 
 .accordion__element {
@@ -18,6 +22,10 @@
   align-items: center;
   width: 100%;
   padding: 23px 0;
+
+  @include vp-1365 {
+    padding: 23px 0;
+  }
 
   @include vp-767 {
     padding: 21px 0;
@@ -60,7 +68,10 @@
   }
 
   @include vp-1365 {
-    letter-spacing: -1px;
+    // letter-spacing: -1px;
+    font-size: 22px;
+    line-height: 22px;
+
 
     br {
       display: block;
@@ -99,6 +110,8 @@
   }
 
   @include vp-1365 {
+    padding: 9px 0 23px 0;
+    line-height: 25px;
     p {
       max-width: 560px;
     }
