--- a/source/sass/blocks/discounts-card.scss
+++ b/source/sass/blocks/discounts-card.scss
@@ -11,9 +11,17 @@
   @include vp-1365 {
     width: 100%;
 
+    &:nth-of-type(2n) {
+      margin-top: 6px;
+    }
+
     &:first-of-type {
       grid-column: 1/3;
       grid-row: 1/2;
+    }
+
+    &:last-of-type {
+      margin-top: 6px;
     }
   }
 
@@ -42,7 +50,7 @@
   padding: 20px 20px 20px 20px;
 
   @include vp-1365 {
-    padding: 19px 28px 28px;
+    padding: 18px 20px 20px;
     gap: 6px;
   }
 
@@ -62,8 +70,12 @@
   border: none;
 
   .discounts-card__content {
-    gap: 20px;
+    gap: 28px;
     padding: 40px 44px 40px 45px;
+
+    @include vp-1365 {
+      padding: 37px 42px 39px 25px;
+    }
 
     @include vp-767 {
       grid-row: 1/ 2;
@@ -92,7 +104,7 @@
 
     @include vp-1365 {
       margin-top: 0;
-      padding: 10px 0 3px;
+      padding: 10px 0 5px;
     }
 
     @include vp-767 {
@@ -105,7 +117,7 @@
     grid-column: 1 /2;
 
     .discounts-card__description {
-      margin-bottom: 164px;
+      margin-bottom: 122px;
       padding-bottom: 0;
     }
   }
@@ -152,6 +164,7 @@
   @include vp-1365 {
     font-size: 24px;
     line-height: 32px;
+    letter-spacing: 1.1px;
   }
 
   @include vp-767 {
@@ -183,7 +196,7 @@
   margin: 0;
   font-size: 16px;
   font-weight: 300;
-  line-height: 22px;
+
   letter-spacing: -0.15px;
 
   br {
@@ -191,8 +204,9 @@
   }
 
   @include vp-1365 {
-    width: 232px;
-    padding-bottom: 30px;
+    width: 235px;
+    padding-bottom: 15px;
+    line-height: 24px;
 
     br {
       display: block;
@@ -224,7 +238,6 @@
   line-height: 14px;
   color: $color-main-light2;
   text-transform: uppercase;
-  // letter-spacing: 0.7px;
   user-select: none;
 
   &::before {
@@ -268,7 +281,7 @@
   }
 
   @include vp-1365 {
-    padding: 10px 0 4px;
+    padding: 10px 0 5px;
   }
 
   @include vp-767 {
