--- a/source/sass/blocks/faq.scss
+++ b/source/sass/blocks/faq.scss
@@ -3,7 +3,7 @@
   background-color: #f8f9fc;
 
   @include vp-1365 {
-    padding: 101px 0 99px;
+    padding: 61px 0 59px;
   }
 
   @include vp-767 {
@@ -13,12 +13,10 @@
 
 .faq__title {
   margin-bottom: 50px;
-  // letter-spacing: 2.9px;
 
   @include vp-1365 {
     text-align: center;
-    margin-bottom: 49px;
-    letter-spacing: 1.6px;
+    margin-bottom: 44px;
   }
 
   @include vp-767 {
@@ -31,6 +29,10 @@
   display: grid;
   grid-template-columns: 260px 1fr;
   gap: 40px;
+
+  @include vp-1365 {
+    gap: 46px;
+  }
 
   @include vp-767 {
     gap: 29px;
@@ -80,10 +82,10 @@
 
 .faq__button {
   max-width: none;
-  padding: 20px 20px 16px;
+  padding: 19px 20px 18px;
   font-size: 18px;
   font-weight: 400;
-  line-height: 18px;
+  line-height: 17px;
   text-transform: none;
   letter-spacing: normal;
   box-shadow: 0 0 0 2px rgba($color-main, 0.2) inset;
