--- a/source/sass/global/variables.scss
+++ b/source/sass/global/variables.scss
@@ -32,6 +32,8 @@ $color-torch-red: #ff1553;
 // Font
 $ff-placeholder: "Roboto-Condensed-Regular", "Arial", sans-serif;
 $font-roboto: "RobotoCondensed", "Arial", sans-serif;
+$font-roboto-light: "RobotoCondensed-Light", "Arial", sans-serif;
+$font-roboto-bold: "RobotoCondensed-bold", "Arial", sans-serif;
 $font-alumni: "AlumniSans", "Arial", sans-serif;
 $font-alumni-extrabold: "AlumniSans-ExtraBold", "Arial", sans-serif;
 $font-alumni-semibold: "AlumniSans-SemiBold", "Arial", sans-serif;
