--- a/source/sass/blocks/reviews.scss
+++ b/source/sass/blocks/reviews.scss
@@ -2,7 +2,7 @@
   padding: 100px 0 44px;
 
   @include vp-1365 {
-    padding: 101px 0 20px;
+    padding: 60px 0 60px;
   }
 
   @include vp-767 {
@@ -15,8 +15,9 @@
   text-align: center;
 
   @include vp-1365 {
-    letter-spacing: 1.55px;
-    margin: 0 0 41px;
+    margin: 0 0 35px;
+    font-size: 54px;
+    line-height: 54px;
   }
 
   @include vp-767 {
@@ -42,12 +43,12 @@
   @include vp-1365 {
     .slider__button--prev {
       left: -17px;
-      top: 38%;
+      top: 49%;
     }
 
     .slider__button--next {
       right: -17px;
-      top: 38%;
+      top: 49%;
     }
   }
 
@@ -70,7 +71,7 @@
 
 
   @include vp-1365 {
-    max-width: 580px;
+    max-width: 500px;
   }
 
   @include vp-767 {
