--- a/source/sass/global/fonts.scss
+++ b/source/sass/global/fonts.scss
@@ -31,9 +31,17 @@
 }
 
 @font-face {
-  font-family: "RobotoCondensed";
+  font-family: "RobotoCondensed-Bold";
   font-weight: 700;
   font-style: normal;
   font-display: swap;
   src: url("../fonts/RobotoCondensed-Bold.woff2") format("woff2");
+}
+
+@font-face {
+  font-family: "RobotoCondensed-Light";
+  font-weight: 300;
+  font-style: normal;
+  font-display: swap;
+  src: url("../fonts/RobotoCondensed-Light.woff2") format("woff2");
 }
