--- a/source/sass/blocks/form.scss
+++ b/source/sass/blocks/form.scss
@@ -54,11 +54,15 @@
     &::placeholder {
       color: rgba($color-default-white, 0.4);
     }
+
+
   }
 
   @include vp-1365 {
-    padding: 8px 0 4px;
-    font-size: 16px;
+    padding: 14px 0 4px;
+    font-size: 14px;
+    line-height: 20px;
+    // line-height: 0.5px;
   }
 
   @include vp-767 {
