--- a/source/sass/blocks/contacts.scss
+++ b/source/sass/blocks/contacts.scss
@@ -2,7 +2,7 @@
   padding: 59px 0 59px 103px;
 
   @include vp-1365 {
-    padding: 183px 87px 97px;
+    padding: 106px 120px 59px;
   }
 
   @include vp-767 {
@@ -14,7 +14,11 @@
   margin-bottom: 36px;
 
   @include vp-1365 {
-    letter-spacing: 2.8px;
+    // letter-spacing: 2.8px;
+    font-size: 54px;
+    // letter-spacing: 2.4px;
+    text-align: center;
+    margin: 0 auto 42px;
   }
 
   @include vp-767 {
@@ -46,11 +50,11 @@
   }
 
   @include vp-1365 {
-    column-gap: 90px;
+    column-gap: 62px;
 
     &::before {
-      left: 58%;
-      height: 137px;
+      left: 50%;
+      height: 117px;
     }
   }
 
@@ -85,7 +89,7 @@
     max-width: 218px;
 
     &:nth-child(2n) {
-      padding-left: 48px;
+      padding-left: 0;
     }
   }
 
