--- a/source/sass/blocks/footer.scss
+++ b/source/sass/blocks/footer.scss
@@ -4,7 +4,8 @@
   background-color: #030a1a;
 
   @include vp-1365 {
-    padding: 45px 0 42px;
+    padding: 42px 0 45px;
+
   }
 
   @include vp-767 {
@@ -18,8 +19,9 @@
   gap: 154px;
 
   @include vp-1365 {
-    gap: 25px;
-    grid-template-columns: 100px 1fr 100px;
+    gap: 22px;
+    grid-template-columns: 123px 1fr 119px;
+    align-items: center;
   }
 }
 
@@ -49,7 +51,7 @@
   }
 
   @include vp-1365 {
-    width: 98px;
+    width: 110px;
     height: 26px;
   }
 
