--- a/source/sass/blocks/social-list.scss
+++ b/source/sass/blocks/social-list.scss
@@ -7,6 +7,10 @@
   padding: 0;
   list-style-type: none;
 
+  @include vp-1365 {
+    gap: 15px;
+  }
+
   @include vp-767 {
     margin: 25px auto 0;
     grid-column: 1/4;
