--- a/source/sass/blocks/main-nav.scss
+++ b/source/sass/blocks/main-nav.scss
@@ -10,7 +10,7 @@
   }
 
   @include vp-767 {
-    padding: 15px 0 24px;
+    padding: 13px 0 24px;
   }
 }
 
@@ -24,7 +24,6 @@
   svg {
     display: block;
     width: 100%;
-    // height: 100%;
   }
 
   @include vp-1365 {
@@ -33,8 +32,8 @@
   }
 
   @include vp-767 {
-    width: 102px;
-    height: 22px;
+    width: 100px;
+    height: 20px;
   }
 
   &:hover {
@@ -58,10 +57,10 @@
   font-weight: 700;
   text-decoration: none;
   line-height: 30px;
-  // letter-spacing: -0.35px;
   color: $color-default-white;
   border-bottom: 1px solid rgba(255, 255, 255, 0);
   user-select: none;
+  margin: 0;
 
   @include vp-1365 {
     font-size: 24px;
@@ -70,7 +69,9 @@
 
   @include vp-767 {
     font-size: 22px;
-    line-height: 22px;
+    line-height: 25px;
+    letter-spacing: 0.5px;
+    margin: 0 1px 0 0;
   }
 
   &:hover {
