--- a/source/sass/blocks/card-list.scss
+++ b/source/sass/blocks/card-list.scss
@@ -15,7 +15,7 @@
 
   @include vp-767 {
     gap: 35px;
-    margin: 34px 0 5px;
+    margin: 30px 0 5px;
   }
 }
 
@@ -36,7 +36,7 @@
   }
 
   @include vp-767 {
-    width: 100%;
+    width: 290px;
     padding: 42px 20px 43px 20px;
   }
 }
