--- a/source/sass/blocks/gym.scss
+++ b/source/sass/blocks/gym.scss
@@ -6,7 +6,7 @@
   }
 
   @include vp-767 {
-    padding: 71px 0 30px 0;
+    padding: 35px 0 40px 0;
   }
 }
 
@@ -42,16 +42,14 @@
   }
 
   @include vp-767 {
-    padding: 52px 0 83px;
+    padding: 35px 0 0;
   }
 }
 
 .gym__title {
   margin: 6px 0 26px 0;
-  // margin-bottom: 31px;
   font-size: 54px;
   line-height: 54px;
-  // letter-spacing: 3.2px;
   letter-spacing: 0.1px;
   font-family: $font-alumni-semibold;
   font-weight: 600;
@@ -65,6 +63,7 @@
     margin-bottom: 4px;
     font-size: 30px;
     line-height: 30px;
+    letter-spacing: 0.75px;
   }
 }
 
@@ -80,7 +79,7 @@
   }
 
   @include vp-767 {
-    margin: 14px 0 38px;
+    margin: 13px 0 37px;
     font-size: 18px;
     line-height: 20px;
     letter-spacing: 0;
@@ -110,7 +109,7 @@
 
   @include vp-767 {
     margin: 0;
-    max-width: 280px;
+    max-width: 290px;
     font-size: 14px;
     line-height: 22px;
   }
@@ -126,7 +125,7 @@
   }
 
   @include vp-767 {
-    padding: 0 0 40px;
+    padding: 0 0 36px;
   }
 }
 
@@ -164,6 +163,10 @@
 .gym__video svg {
   width: 100%;
   height: 100%;
+
+  @include vp-767 {
+    margin: 2px 0 0 0;
+  }
 }
 
 .gym__video img {
@@ -186,6 +189,12 @@
   @include vp-1365 {
     width: 73px;
     height: 73px;
+  }
+
+  @include vp-767 {
+    top: 49%;
+    width: 75px;
+    height: 75px;
   }
 
   &::before,
