--- a/source/sass/blocks/subscription.scss
+++ b/source/sass/blocks/subscription.scss
@@ -27,7 +27,7 @@
   }
 
   @include vp-767 {
-    padding: 31px 0 104px;
+    padding: 40px 0 104px;
 
     &::before {
       display: none;
@@ -44,7 +44,7 @@
   }
 
   @include vp-767 {
-    letter-spacing: 1.5px;
-    margin-bottom: 20px;
+    margin-bottom: 30px;
+    line-height: 33px;
   }
 }
