--- a/source/sass/blocks/games.scss
+++ b/source/sass/blocks/games.scss
@@ -6,7 +6,7 @@
   }
 
   @include vp-767 {
-    padding: 70px 0 30px;
+    padding: 25px 0 30px;
   }
 }
 
@@ -19,7 +19,12 @@
     padding: 0;
     grid-template-columns: 300px 1fr;
   }
+
+  @include vp-767 {
+    width: 290px;
+  }
 }
+
 
 .games__wrapper {
   display: grid;
