--- a/source/sass/blocks/games-card.scss
+++ b/source/sass/blocks/games-card.scss
@@ -1,17 +1,17 @@
 .games-card {
   & + & {
-    margin-top: 17px;
+    margin: 17px 0 0 0;
   }
 
   @include vp-1365 {
     &:last-of-type {
-      margin-top: 6px;
+      margin: 6px 0 0 0;
     }
   }
 
   @include vp-767 {
     &:last-of-type {
-      margin-top: 3px;
+      margin: 2px 0 0 0;
     }
   }
 }
@@ -31,7 +31,7 @@
   }
 
   @include vp-767 {
-    margin: 2px 0 0;
+    margin: 3px 0 0 0;
 
     font-size: 16px;
     line-height: 20px;
@@ -58,7 +58,8 @@
   }
 
   @include vp-767 {
-    padding-top: 3px;
+    padding: 2px 0 0 0;
+    align-items: start;
   }
 }
 
@@ -76,5 +77,12 @@
     width: 30px;
     margin: 0 0 0 0;
     padding: 0 0 0 5px;
+  }
+
+  @include vp-767 {
+    padding: 0 0 0 4px;
+    font-size: 12px;
+    line-height: 12px;
+    letter-spacing: 0.05px;
   }
 }
