--- a/source/sass/blocks/games.scss
+++ b/source/sass/blocks/games.scss
@@ -46,7 +46,7 @@
     grid-column: 1/2;
     grid-row: 1/2;
     gap: 12px 47px;
-    padding: 40px;
+    padding: 40px 40px 40px 40px;
   }
 }
 
@@ -72,7 +72,7 @@
 
   @include vp-767 {
     font-size: 46px;
-    letter-spacing: 2.4px;
+    // letter-spacing: 2.4px;
   }
 }
 
@@ -97,7 +97,7 @@
   }
 
   @include vp-767 {
-    margin: 0;
+    margin: 4px 0 0 0;
     width: 173px;
     font-size: 16px;
     line-height: 20px;
@@ -122,12 +122,16 @@
     grid-column: 2 / 3;
     grid-row: 1 / 2;
   }
+
+  @include vp-767 {
+    width: 56px;
+  }
 }
 
 .games__button {
   grid-column: 1 / -1;
   max-width: none;
-  margin-top: 3px;
+  margin: 3px 0 0 0;
   padding: 28px 20px 25px 20px;
 
   @media (width >= 1366px) {
@@ -135,11 +139,12 @@
   }
 
   @include vp-1365 {
-    margin-top: -1px;
+    margin: -1px 0 0 0;
   }
 
   @include vp-767 {
-    margin-top: 9px;
+    margin: 4px 0 0 0;
+    padding: 24px 20px 23px 20px;
   }
 }
 
