--- a/source/sass/blocks/discounts-card.scss
+++ b/source/sass/blocks/discounts-card.scss
@@ -26,18 +26,29 @@
   }
 
   @include vp-767 {
-    width: 100%;
+    width: 290px;
+    margin: 0 auto;
 
     &:first-of-type {
       margin-top: 0;
     }
 
     &:nth-last-of-type(2n) {
-      margin-top: 41px;
+      margin-top: 40px;
+
+      .discounts-card__description {
+        margin: 10px auto 5px auto;
+        padding: 0;
+      }
     }
 
     &:last-of-type {
       margin-top: 30px;
+
+      .discounts-card__description {
+        margin: 10px auto 5px auto;
+        padding: 0;
+      }
     }
   }
 }
@@ -55,7 +66,7 @@
   }
 
   @include vp-767 {
-    padding: 34px 28px 32px;
+    padding: 16px 28px 20px;
     gap: 5px;
   }
 }
@@ -78,9 +89,10 @@
     }
 
     @include vp-767 {
+      gap: 15px;
       grid-row: 1/ 2;
       grid-column: 1 /3;
-      padding: 40px 44px 45px;
+      padding: 25px 44px 30px;
     }
   }
 
@@ -109,6 +121,7 @@
 
     @include vp-767 {
       margin: 0 auto;
+      min-width: 74px;
     }
   }
 
@@ -124,11 +137,12 @@
 
   @include vp-767 {
     grid-template-columns: auto;
-    width: 290px;
+    width: 320px;
 
     .discounts-card__description {
-      margin: 0 auto 10px;
+      margin: 0 auto 4px;
       padding: 0;
+      line-height: 20px;
       letter-spacing: -0.15px;
     }
   }
@@ -144,7 +158,7 @@
   @include vp-767 {
     grid-row: 2/3;
     grid-column: 1 /2;
-    width: 290px;
+    width: 320px;
   }
 
   img {
@@ -168,9 +182,14 @@
   }
 
   @include vp-767 {
-    font-size: 22px;
+    font-size: 21px;
     text-align: center;
     line-height: 32px;
+    letter-spacing: 0.65px;
+
+    //  &:not-first-of-type {
+    //   margin: 0 0 5px 0;
+    //  }
   }
 }
 
@@ -185,10 +204,11 @@
   }
 
   @include vp-767 {
-    margin: 0 0 14px;
+    margin: 0 0 24px;
     text-align: center;
-    font-size: 64px;
+    font-size: 61px;
     line-height: 42px;
+    letter-spacing: 2.25px;
   }
 }
 
@@ -217,7 +237,7 @@
     text-align: center;
     line-height: 22px;
     letter-spacing: -1.15px;
-    width: 188px;
+    width: 205px;
     margin: 0 auto;
     padding-bottom: 17px;
 
