--- a/source/sass/blocks/discounts.scss
+++ b/source/sass/blocks/discounts.scss
@@ -6,7 +6,13 @@
   }
 
   @include vp-767 {
-    padding: 61px 0 70px;
+    padding: 41px 0 40px;
+
+    .container {
+      padding: 0;
+      width: 320px;
+      margin: 0 auto;
+    }
   }
 }
 
@@ -19,8 +25,8 @@
   }
 
   @include vp-767 {
-    margin: 0 auto 41px;
-    letter-spacing: 1.75px;
+    margin: 0 auto 39px;
+    // letter-spacing: 1.75px;
   }
 }
 
@@ -37,11 +43,12 @@
   }
 
   @include vp-767 {
+    margin: 0 auto;
     display: flex;
     flex-direction: column;
     flex-wrap: wrap;
     justify-content: start;
-    width: 290px;
+    width: 320px;
     gap: 0;
   }
 }
