--- a/source/sass/blocks/accordion.scss
+++ b/source/sass/blocks/accordion.scss
@@ -28,7 +28,7 @@
   }
 
   @include vp-767 {
-    padding: 21px 0;
+    padding: 20px 0 21px 0;
   }
 }
 
@@ -107,6 +107,9 @@
 
   p {
     margin: 0;
+    br {
+      display: none;
+    }
   }
 
   p + p {
@@ -118,6 +121,9 @@
     line-height: 24px;
     p {
       max-width: 560px;
+      br {
+        display: none;
+      }
     }
   }
 
@@ -128,7 +134,11 @@
     padding: 21px 0;
 
     p {
-      max-width: 276px;
+      max-width: 262px;
+
+      br {
+        display: block;
+      }
     }
   }
 }
