--- a/source/sass/blocks/faq.scss
+++ b/source/sass/blocks/faq.scss
@@ -20,8 +20,8 @@
   }
 
   @include vp-767 {
-    margin-bottom: 36px;
-    letter-spacing: 1px;
+    margin-bottom: 34px;
+    // letter-spacing: 1px;
   }
 }
 
@@ -35,7 +35,8 @@
   }
 
   @include vp-767 {
-    gap: 29px;
+    row-gap: 35px;
+    column-gap: 0;
   }
 }
 
@@ -62,7 +63,7 @@
     display: grid;
     grid-template-columns: repeat(2, 1fr);
     column-gap: 10px;
-    row-gap: 8px;
+    row-gap: 10px;
   }
 }
 
@@ -103,7 +104,7 @@
   }
 
   @include vp-767 {
-    padding: 15px 20px 11px;
+    padding: 14px 20px 14px;
     font-size: 16px;
     line-height: 18px;
   }
