accordion item mobile

--- a/source/sass/blocks/accordion.scss
+++ b/source/sass/blocks/accordion.scss
@@ -40,7 +40,7 @@
       }
 
       .accordion__button-wrapper {
-        padding-bottom: 22px;
+        padding-bottom: 20px;
       }
     }
   }
@@ -131,7 +131,7 @@
     max-width: 290px;
     line-height: 20px;
     letter-spacing: -0.2px;
-    padding: 21px 0;
+    padding: 21px 0 19px 0;
 
     p {
       max-width: 262px;
