--- a/source/sass/blocks/reviews-card.scss
+++ b/source/sass/blocks/reviews-card.scss
@@ -103,7 +103,6 @@
 
   .reviews-card__description {
     font-family: $font-roboto-light;
-    // font-weight: 300;
     margin: 20px 0 0 0;
     max-width: 310px;
     font-weight: 300;
@@ -121,7 +120,7 @@
     justify-content: space-between;
     width: 226px;
     margin: 0 auto;
-    padding: 30px 25px 29px;
+    padding: 30px 28px 28px 28px;
     row-gap: 0;
     text-align: center;
 
@@ -137,15 +136,15 @@
       width: 176px;
       margin: 0 auto;
       margin-top: 10px;
-      font-size: 20px;
+      font-size: 18px;
       font-weight: 400;
       line-height: 20px;
-      letter-spacing: -1.2px;
+      letter-spacing: 0.1px;
     }
 
     .reviews-card__description {
-      width: 176px;
-      margin: 17px auto 0;
+      width: 184px;
+      margin: 18px auto 0;
       font-size: 14px;
       line-height: 22px;
     }
