--- a/source/sass/blocks/reviews.scss
+++ b/source/sass/blocks/reviews.scss
@@ -6,7 +6,7 @@
   }
 
   @include vp-767 {
-    padding: 71px 0 70px;
+    padding: 41px 0 70px;
   }
 }
 
@@ -21,7 +21,9 @@
   }
 
   @include vp-767 {
-    margin: 0 0 45px;
+    margin: 0 0 39px;
+    font-size: 32px;
+    line-height: 32px;
   }
 }
 
@@ -75,7 +77,7 @@
   }
 
   @include vp-767 {
-    max-width: 226px;
+    max-width: 240px;
   }
 }
 
