--- a/source/sass/blocks/contacts-card.scss
+++ b/source/sass/blocks/contacts-card.scss
@@ -5,6 +5,10 @@
     @include vp-1365 {
       margin-top: 15px;
     }
+
+    @include vp-767 {
+      margin-top: 24px;
+    }
   }
 }
 
@@ -21,8 +25,9 @@
   }
 
   @include vp-767 {
-    letter-spacing: -0.95px;
-    margin: 0 0 8px;
+    font-size: 20px;
+    letter-spacing: 0;
+    margin: 0 0 10px;
   }
 }
 
