--- a/source/sass/blocks/contacts.scss
+++ b/source/sass/blocks/contacts.scss
@@ -6,7 +6,7 @@
   }
 
   @include vp-767 {
-    padding: 117px 0 68px;
+    padding: 87px 0 38px;
   }
 }
 
@@ -14,16 +14,15 @@
   margin-bottom: 36px;
 
   @include vp-1365 {
-    // letter-spacing: 2.8px;
     font-size: 54px;
-    // letter-spacing: 2.4px;
     text-align: center;
     margin: 0 auto 42px;
   }
 
   @include vp-767 {
-    letter-spacing: 1.55px;
-    margin: 0 0 36px;
+    font-size: 32px;
+    text-align: start;
+    margin: 0 0 35px;
   }
 }
 
@@ -77,11 +76,11 @@
     padding-left: 44px;
 
     .contacts-card:first-child .contacts-card__title {
-      margin: 0 0 4px 0;
+      margin: 0 0 8px 0;
     }
 
     .contacts-card:last-child .contacts-card__title {
-      margin: 0 0 4px 0;
+      margin: 0 0 8px 0;
     }
   }
 
@@ -96,7 +95,7 @@
   @include vp-767 {
     &:nth-child(2n) {
       padding-left: 0;
-      margin-top: 25px;
+      margin-top: 24px;
     }
   }
 }
