--- a/source/sass/blocks/free.scss
+++ b/source/sass/blocks/free.scss
@@ -17,20 +17,18 @@
 }
 
 .free__title {
-  // letter-spacing: 2.9px;
   margin-bottom: 30px;
 
   @include vp-1365 {
     font-size: 54px;
-    // letter-spacing: 2.4px;
     text-align: center;
     margin: 0 auto 27px;
   }
 
   @include vp-767 {
     font-size: 32px;
-    letter-spacing: 1.25px;
-    margin-bottom: 30px;
+    margin-bottom: 27px;
+    text-align: start;
   }
 }
 
@@ -58,7 +56,8 @@
   padding: 28px 20px 25px 20px;
 
   @include vp-767 {
-    margin-top: 16px;
+    padding: 24px 20px 23px 20px;
+    margin-top: 10px;
     grid-column: 1/3;
     grid-row: 3/4;
   }
