--- a/source/sass/blocks/footer.scss
+++ b/source/sass/blocks/footer.scss
@@ -9,7 +9,7 @@
   }
 
   @include vp-767 {
-    padding: 28px 0 45px;
+    padding: 40px 0 40px;
   }
 }
 
@@ -22,6 +22,10 @@
     gap: 22px;
     grid-template-columns: 123px 1fr 119px;
     align-items: center;
+  }
+
+  @include vp-767 {
+    gap: 27px;
   }
 }
 
@@ -57,8 +61,8 @@
 
   @include vp-767 {
     margin-right: auto;
-    width: 89px;
-    height: 19px;
+    width: 100px;
+    height: 20px;
     grid-column: 1/4;
     grid-row: 1/2;
   }
