--- a/source/sass/blocks/accordion.scss
+++ b/source/sass/blocks/accordion.scss
@@ -155,19 +155,21 @@
   &::before {
     position: absolute;
     content: "";
-    right: 8px;
+    right: 9px;
+    top: 18px;
     width: 20px;
-    height: 1px;
+    height: 2px;
     background-color: currentColor;
   }
 
   &::after {
     position: absolute;
     content: "";
-    right: 8px;
+    right: 9px;
+    top: 18px;
     transform: rotate(90deg);
     width: 20px;
-    height: 1px;
+    height: 2px;
     background-color: currentColor;
   }
 
