--- a/source/sass/blocks/advantages.scss
+++ b/source/sass/blocks/advantages.scss
@@ -1,5 +1,5 @@
 .advantages {
-  padding: 100px 0 60px;
+  padding: 100px 0 58px;
   background-color: #f8f9fc;
 
   @include vp-1365 {
@@ -19,16 +19,13 @@
 .advantages__title {
   margin: 0 0 51px 0;
   text-align: center;
-  // letter-spacing: 3px;
 
   @include vp-1365 {
     margin: 0 0 20px 0;
-    // letter-spacing: 1.65px;
   }
 
   @include vp-767 {
     margin: 0 0 6px 0;
-    // letter-spacing: 1.26px;
   }
 }
 
@@ -74,7 +71,7 @@
   }
 
   &:nth-child(2n) > :nth-child(2n) > :first-child {
-    letter-spacing: -0.5px;
+    letter-spacing: 0.5px;
 
     @include vp-767 {
       letter-spacing: 0;
@@ -83,6 +80,12 @@
 
   &:last-child > :nth-child(2n) > :last-child {
     margin: 0 0 0 2px;
+
+    .advantages__description{
+      @include vp-1365 {
+        letter-spacing: -0.25px;
+      }
+    }
   }
 
   &:nth-child(2n + 1) {
@@ -122,14 +125,14 @@
     border-bottom: 2px solid transparent;
 
     &:nth-last-child(-n + 2) > :nth-child(2n) > :first-child {
-      letter-spacing: -0.1px;
+      letter-spacing: 0.5px;
       margin: 3px 0 1px 1px;
     }
   }
 
   &:nth-child(2n + 1).advantages__card--center {
-    gap: 23px;
-    padding-bottom: 36px;
+    gap: 30px;
+    padding-bottom: 58px;
   }
 
   @include vp-767 {
@@ -175,7 +178,7 @@
   &:first-child {
     font-size: 70px;
     font-weight: 700;
-    line-height: 73px;
+    line-height: 70px;
     color: transparent;
     background-color: currentColor;
     background-image: linear-gradient(142.51deg, #d10a42 0%, #0041ca 87.33%);
@@ -220,12 +223,14 @@
   @include vp-1365 {
     margin: 1px 0 0 0;
     font-size: 20px;
+    letter-spacing: 0.25px;
   }
 
   @include vp-767 {
     margin: 10px 0 0 0;
     font-size: 18px;
     line-height: 22px;
+    letter-spacing: 0.25px;
   }
 }
 
@@ -238,6 +243,7 @@
 
   @include vp-1365 {
     line-height: 24px;
+    letter-spacing: 0;
   }
 
   @include vp-767 {
