--- a/source/sass/blocks/main-nav.scss
+++ b/source/sass/blocks/main-nav.scss
@@ -57,6 +57,7 @@
   font-weight: 700;
   text-decoration: none;
   line-height: 30px;
+  letter-spacing: 0.65px;
   color: $color-default-white;
   border-bottom: 1px solid rgba(255, 255, 255, 0);
   user-select: none;
@@ -65,6 +66,7 @@
   @include vp-1365 {
     font-size: 24px;
     line-height: 24px;
+    letter-spacing: 0.65px;
   }
 
   @include vp-767 {
